[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/SilverCheckBox.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Settings/CheckBox.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="CheckBox" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = -20.0
margin_top = -30.0
margin_right = 191.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Enable Description"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Control" parent="."]
margin_left = 220.0
margin_top = -20.0
margin_right = 220.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Checked" type="TouchScreenButton" parent="Button"]
scale = Vector2( 4, 2 )
shape = SubResource( 1 )

[node name="CheckedSprite" type="ColorRect" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 80.0
margin_bottom = 40.0
color = Color( 0.0156863, 1, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UncheckedSprite" type="ColorRect" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 80.0
margin_bottom = 40.0
color = Color( 0.968627, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button/Checked" to="." method="_on_Checked_pressed"]
